2002-06-25  Richard Williamson  <rjw@apple.com>
        
        Support for khtml style selection drawing.  Ugly,
        we'll want to make this more Mac like.

        * khtml/rendering/font.cpp:
        (Font::drawText):
            Enable khtml code path.  Removed APPLE_CHANGES
        * kwq/KWQFontMetrics.mm:
        (QFontMetrics::charWidth):
            Implemented in terms of width().
        * kwq/KWQPainter.mm:
        (QPainter::drawText):
            Implemented.
        * kwq/qt/qfontmetrics.h:
            Added QFontMetrics::charWidth.

2002-06-25  Richard Williamson  <rjw@apple.com>

        Support for rudimentary plain text 'copy'.
        
        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge selectedText]):

2002-06-25  Richard Williamson  <rjw@apple.com>

        Enabled progressive image loading code.

        * khtml/misc/loader.cpp:
        (CachedImage::data):
        * kwq/KWQPixmap.mm:
        (QPixmap::QPixmap):

2002-06-25  Darin Adler  <darin@apple.com>

	Removed remaining uses of BORROWED defines.
	Made some simplifications and formatting fixes. All safe.

        * kwq/KWQArrayImpl.h:
        * kwq/KWQArrayImpl.mm:
        * kwq/KWQChar.mm:
        * kwq/KWQCharsets.mm:
        * kwq/KWQFile.mm:
        * kwq/KWQKCursor.mm:
        * kwq/KWQKHTMLPart.mm:
        * kwq/KWQListImpl.h:
        * kwq/KWQMapImpl.mm:
        * kwq/KWQString.mm:
        * kwq/KWQValueListImpl.mm:
        * kwq/KWQVectorImpl.h:
        * kwq/KWQtextcodec.mm:
        * kwq/make-charset-table.pl:
        * kwq/make-mac-encodings.c:
        * kwq/qt/qfile.h:
        * kwq/qt/qregexp.h:
        * kwq/qt/qtextcodec.h:

        * WebCore-tests.exp: Small change to exports for the array test.

2002-06-24  Chris Blumenberg  <cblu@apple.com>

	Changed the plug-in view constructor to take NSURL's rather
	than URL strings.	

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPartImpl::requestObject):
        * kwq/WebCoreViewFactory.h: