@@ -1088,6 +1088,7 @@ private:
 #ifdef APPLE_CHANGES
 public:
   void setTitle(const DOM::DOMString &);
+  void detachView();
   
   KWQKHTMLPartImpl *impl;
   friend class KWQKHTMLPartImpl;
